[gd_scene load_steps=15 format=3 uid="uid://dnm01uiryd50j"]

[ext_resource type="Script" path="res://Scripts/Enemy_Tasks.gd" id="1_g0fu0"]
[ext_resource type="Texture2D" uid="uid://dljo03yx2dsk1" path="res://Textures/Characters/Spider/Up_Down/1.png" id="3_7uglb"]
[ext_resource type="Texture2D" uid="uid://k6og4oiq6d63" path="res://Textures/Characters/Spider/Up_Down/2.png" id="4_nilld"]
[ext_resource type="Texture2D" uid="uid://4vxpnlos2b61" path="res://Textures/Characters/Spider/Up_Down/3.png" id="5_00v1d"]
[ext_resource type="Texture2D" uid="uid://vfrejw50k3y6" path="res://Textures/Characters/Spider/Up_Down/4.png" id="6_6hhj6"]
[ext_resource type="Texture2D" uid="uid://brd7dbah2vefs" path="res://Textures/Characters/Spider/Up_Down/5.png" id="7_sjcju"]
[ext_resource type="Texture2D" uid="uid://boma7r540ufnp" path="res://Textures/Characters/Spider/Up_Down/6.png" id="8_ih5ty"]
[ext_resource type="Texture2D" uid="uid://3hvbvbim1wn4" path="res://Textures/Characters/Spider/Up_Down/7.png" id="9_tfyfy"]
[ext_resource type="Texture2D" uid="uid://cg8y4j7vl5o3k" path="res://Textures/Characters/Spider/Up_Down/8.png" id="10_5ersf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ddo54"]
radius = 45.0
height = 174.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tuloq"]
radius = 49.0
height = 202.0

[sub_resource type="Animation" id="Animation_ury3g"]
resource_name = "MoveNormal"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_7uglb"), ExtResource("4_nilld"), ExtResource("5_00v1d"), ExtResource("6_6hhj6"), ExtResource("7_sjcju"), ExtResource("8_ih5ty"), ExtResource("9_tfyfy"), ExtResource("10_5ersf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_48y24"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_7uglb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ygdg"]
_data = {
"MoveNormal": SubResource("Animation_ury3g"),
"RESET": SubResource("Animation_48y24")
}

[node name="Enemy_Spider" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 2
script = ExtResource("1_g0fu0")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_7uglb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ddo54")

[node name="Area2D_Hitbox" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Hitbox"]
position = Vector2(0, 15)
shape = SubResource("CapsuleShape2D_tuloq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6ygdg")
}

[node name="Timer_Rehit" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D_Hitbox" to="." method="_on_area_2d_hitbox_body_entered"]
[connection signal="body_exited" from="Area2D_Hitbox" to="." method="_on_area_2d_hitbox_body_exited"]
[connection signal="timeout" from="Timer_Rehit" to="." method="_on_timer_rehit_timeout"]
